# wyoming-macos-stt

./: .gitignore  README.md  pyproject.toml
.gitea/workflows/: test.yaml
script/: install.py
tests/: test_macos_stt.py
wyoming_macos_stt/: __init__.py  __main__.py  handler.py  info.py
