[project]
name = "wyoming-macos-stt"
version = "2.5.0.0"
description = "Wyoming server for Speech-to-Text on macOS"
readme = "README.md"
requires-python = ">=3.8.1,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Michael Hansen", email = "mike@rhasspy.org"},
    {name = "OpenHoster", email = "openhosterlab@gmail.com"}
]
keywords = ["rhasspy", "wyoming", "macos", "stt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "wyoming>=1.5.3",
]

[project.urls]
Homepage = "https://github.com/openhoster/wyoming-macos-stt"

[tool.setuptools]
platforms = ["any"]
zip-safe  = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["wyoming_macos_stt"]
exclude = ["tests"]

[project.scripts]
wyoming-macos-stt = "wyoming_macos_stt.__main__:run"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
asyncio_mode = "auto"
[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.24.0",
]
